<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/price_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <Button
            android:id="@+id/all_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:text="@string/all_type"
            />

        <Button
            android:id="@+id/free_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:text="Free"
             />

        <Button
            android:id="@+id/paid_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:text="Paid"
             />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    </androidx.constraintlayout.widget.ConstraintLayout >

