...
            android:layout_marginTop="8dp"
            android:text="instructor name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/course_detail_text_price"
            style="@style/LearningPlat.Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="$10.00"
...
